Added Markdown files into gitignore

--- a/Scripts/.gitignore
+++ b/Scripts/.gitignore
@@ -2,3 +2,7 @@
 mystyle.css
 references.bib
 triplot_RDA_Borcard2018.R
+13_Model-Diagnostics_V01.Rmd
+09_Updated Results.Rmd
+10_Final-Results.Rmd
+
