--- a/Scripts/.gitignore
+++ b/Scripts/.gitignore
@@ -5,4 +5,5 @@ triplot_RDA_Borcard2018.R
 13_Model-Diagnostics_V01.Rmd
 09_Updated Results.Rmd
 10_Final-Results.Rmd
-
+12_Summary plots Florida.R
+16_Models per trait_v2.R
