--- a/Scripts/.gitignore
+++ b/Scripts/.gitignore
@@ -7,3 +7,4 @@ triplot_RDA_Borcard2018.R
 10_Final-Results.Rmd
 12_Summary plots Florida.R
 16_Models per trait_v2.R
+17_World climate dataset prep_v01.R
