Added locations script since I used it once.

--- a/Scripts/.gitignore
+++ b/Scripts/.gitignore
@@ -8,3 +8,4 @@ triplot_RDA_Borcard2018.R
 12_Summary plots Florida.R
 16_Models per trait_v2.R
 17_World climate dataset prep_v01.R
+18_Add locations to mericarp dataset_V1.R
