--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,12 @@
-.Rproj.user
 .Rhistory
-.RData
-.Ruserdata
-.RDataTmp
-.RDataTmp1
-.03_data loading_V1.R
+mystyle.css
+references.bib
+triplot_RDA_Borcard2018.R
+13_Model-Diagnostics_V01.Rmd
+09_Updated Results.Rmd
+10_Final-Results.Rmd
+12_Summary plots Florida.R
+16_Models per trait_v2.R
+17_World climate dataset prep_v01.R
+18_Add locations to mericarp dataset_V1.R
+.Rproj.user
